# llm-eval-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: results-llama3.2.json
src/llm_eval/: __init__.py  cli.py  client.py  harness.py  models.py  report.py  sandbox.py  scorer.py
tasks/: tasks.json
tests/: test_harness.py  test_sandbox.py  test_scorer.py
