[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Async evaluation harness that benchmarks LLM-generated Python code in a sandbox, scores correctness, and documents failure modes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Faaiza Saand", email = "faaizasaand7@gmail.com" }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
llm-eval = "llm_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
